# nostr-affiliate-poc

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
scripts/: e2e.py
tests/: test_flow.py
