[project]
name = "nostr-affiliate-poc"
version = "0.1.0"
description = "Minimal Nostr-inspired affiliate attribution proof-of-concept"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
